--- a/k8s/backend/service.yaml
+++ b/k8s/backend/service.yaml
@@ -1,17 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-service
+  name: backend
   namespace: three-tier
-  labels:
-    app: backend
 spec:
-  type: ClusterIP
   selector:
     app: backend
   ports:
-    - name: http
+    - protocol: TCP
       port: 3500
       targetPort: 3500
-      protocol: TCP
-
+  type: ClusterIP
