--- a/k8s/frontend/service.yaml
+++ b/k8s/frontend/service.yaml
@@ -1,17 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: frontend
   namespace: three-tier
-  labels:
-    app: frontend
 spec:
-  type: ClusterIP
   selector:
     app: frontend
   ports:
-    - name: http
+    - protocol: TCP
       port: 3000
       targetPort: 3000
-      protocol: TCP
-
+      nodePort: 32000
+  type: ClusterIP
