Refactor Jenkinsfile for EKS deployment
Refactor deployment stages and update component deployment logic.

--- a/jenkins/cd/jenkinsfile
+++ b/jenkins/cd/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         choice(
             name: 'DEPLOY_TARGET',
             choices: ['all', 'backend', 'frontend', 'database'],
-            description: 'Select which component to deploy'
+            description: 'Select component to deploy'
         )
     }
 
@@ -16,7 +16,7 @@ pipeline {
         EKS_CLUSTER_NAME = 'eks-neosoft'
         K8S_NAMESPACE = 'three-tier'
 
-        BACKEND_IMAGE = '970547336262.dkr.ecr.ap-south-1.amazonaws.com/neoproject/backend-img:backend'
+        BACKEND_IMAGE  = '970547336262.dkr.ecr.ap-south-1.amazonaws.com/neoproject/backend-img:backend'
         FRONTEND_IMAGE = '970547336262.dkr.ecr.ap-south-1.amazonaws.com/neoproject/frontend-img:frontend'
     }
 
@@ -29,39 +29,41 @@ pipeline {
             }
         }
 
-        stage('Configure kubeconfig') {
+        stage('Deploy to EKS') {
             steps {
                 withAWS(credentials: "${AWS_CREDENTIALS}", region: "${AWS_REGION}") {
+
                     sh '''
                       aws eks update-kubeconfig \
                         --region ${AWS_REGION} \
                         --name ${EKS_CLUSTER_NAME}
                     '''
-                }
-            }
-        }
 
-        stage('Deploy Selected Component') {
-            steps {
-                script {
-                    if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'backend') {
-                        sh '''
-                          kubectl set image deployment/backend backend=${BACKEND_IMAGE} -n ${K8S_NAMESPACE}
-                          kubectl apply -f k8s/backend -n ${K8S_NAMESPACE}
-                        '''
-                    }
+                    script {
 
-                    if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'frontend') {
-                        sh '''
-                          kubectl set image deployment/frontend frontend=${FRONTEND_IMAGE} -n ${K8S_NAMESPACE}
-                          kubectl apply -f k8s/frontend -n ${K8S_NAMESPACE}
-                        '''
-                    }
+                        if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'backend') {
+                            sh '''
+                              kubectl apply -f k8s/backend -n ${K8S_NAMESPACE}
+                              kubectl set image deployment/backend \
+                                backend=${BACKEND_IMAGE} \
+                                -n ${K8S_NAMESPACE}
+                            '''
+                        }
 
-                    if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'database') {
-                        sh '''
-                          kubectl apply -f k8s/database -n ${K8S_NAMESPACE}
-                        '''
+                        if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'frontend') {
+                            sh '''
+                              kubectl apply -f k8s/frontend -n ${K8S_NAMESPACE}
+                              kubectl set image deployment/frontend \
+                                frontend=${FRONTEND_IMAGE} \
+                                -n ${K8S_NAMESPACE}
+                            '''
+                        }
+
+                        if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'database') {
+                            sh '''
+                              kubectl apply -f k8s/database -n ${K8S_NAMESPACE}
+                            '''
+                        }
                     }
                 }
             }
@@ -69,29 +71,4 @@ pipeline {
 
         stage('Verify Rollout') {
             steps {
-                script {
-                    if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'backend') {
-                        sh 'kubectl rollout status deployment/backend -n ${K8S_NAMESPACE}'
-                    }
-
-                    if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'frontend') {
-                        sh 'kubectl rollout status deployment/frontend -n ${K8S_NAMESPACE}'
-                    }
-
-                    if (params.DEPLOY_TARGET == 'database') {
-                        sh 'kubectl get pods -n ${K8S_NAMESPACE} -l app=mongodb'
-                    }
-                }
-            }
-        }
-    }
-
-    post {
-        success {
-            echo "✅ Deployment successful for: ${params.DEPLOY_TARGET}"
-        }
-        failure {
-            echo "❌ Deployment failed for: ${params.DEPLOY_TARGET}"
-        }
-    }
-}
+                withAWS(credentials: "${AWS_CREDENTIALS}", r_
