--- a/jenkins/cd/jenkinsfile
+++ b/jenkins/cd/jenkinsfile
@@ -10,11 +10,10 @@ pipeline {
     }
 
     environment {
-        AWS_REGION = 'ap-south-1'
-        AWS_CREDENTIALS = 'aws-creds'
-
+        AWS_REGION       = 'ap-south-1'
+        AWS_CREDENTIALS  = 'aws-creds'
         EKS_CLUSTER_NAME = 'eks-neosoft'
-        K8S_NAMESPACE = 'three-tier'
+        K8S_NAMESPACE    = 'three-tier'
 
         BACKEND_IMAGE  = '970547336262.dkr.ecr.ap-south-1.amazonaws.com/neoproject/backend-img:backend'
         FRONTEND_IMAGE = '970547336262.dkr.ecr.ap-south-1.amazonaws.com/neoproject/frontend-img:frontend'
@@ -29,46 +28,87 @@ pipeline {
             }
         }
 
-        stage('Deploy to EKS') {
+        stage('Configure kubeconfig') {
             steps {
-                withAWS(credentials: "${AWS_CREDENTIALS}", region: "${AWS_REGION}") {
-
+                withAWS(credentials: 'aws-creds', region: 'ap-south-1') {
                     sh '''
                       aws eks update-kubeconfig \
-                        --region ${AWS_REGION} \
-                        --name ${EKS_CLUSTER_NAME}
+                        --region ap-south-1 \
+                        --name eks-neosoft
                     '''
+                }
+            }
+        }
 
-                    script {
+        stage('Deploy Selected Component') {
+            steps {
+                script {
 
-                        if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'backend') {
-                            sh '''
-                              kubectl apply -f k8s/backend -n ${K8S_NAMESPACE}
-                              kubectl set image deployment/backend \
-                                backend=${BACKEND_IMAGE} \
-                                -n ${K8S_NAMESPACE}
-                            '''
-                        }
+                    if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'backend') {
+                        sh '''
+                          kubectl apply -f k8s/backend -n three-tier
+                          kubectl set image deployment/backend \
+                            backend=970547336262.dkr.ecr.ap-south-1.amazonaws.com/neoproject/backend-img:backend \
+                            -n three-tier
+                        '''
+                    }
 
-                        if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'frontend') {
-                            sh '''
-                              kubectl apply -f k8s/frontend -n ${K8S_NAMESPACE}
-                              kubectl set image deployment/frontend \
-                                frontend=${FRONTEND_IMAGE} \
-                                -n ${K8S_NAMESPACE}
-                            '''
-                        }
+                    if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'frontend') {
+                        sh '''
+                          kubectl apply -f k8s/frontend -n three-tier
+                          kubectl set image deployment/frontend \
+                            frontend=970547336262.dkr.ecr.ap-south-1.amazonaws.com/neoproject/frontend-img:frontend \
+                            -n three-tier
+                        '''
+                    }
 
-                        if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'database') {
-                            sh '''
-                              kubectl apply -f k8s/database -n ${K8S_NAMESPACE}
-                            '''
-                        }
+                    if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'database') {
+                        sh '''
+                          kubectl apply -f k8s/database -n three-tier
+                        '''
                     }
                 }
             }
         }
 
-        stage('Verify Rollout') {
+        stage('Verify Rollout & Rollback on Failure') {
             steps {
-                withAWS(credentials: "${AWS_CREDENTIALS}", r_
+                script {
+                    try {
+
+                        if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'backend') {
+                            sh 'kubectl rollout status deployment/backend -n three-tier --timeout=120s'
+                        }
+
+                        if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'frontend') {
+                            sh 'kubectl rollout status deployment/frontend -n three-tier --timeout=120s'
+                        }
+
+                    } catch (err) {
+
+                        echo '⚠️ Rollout failed — starting rollback'
+
+                        if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'backend') {
+                            sh 'kubectl rollout undo deployment/backend -n three-tier'
+                        }
+
+                        if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'frontend') {
+                            sh 'kubectl rollout undo deployment/frontend -n three-tier'
+                        }
+
+                        error('Deployment failed and was rolled back')
+                    }
+                }
+            }
+        }
+    }
+
+    post {
+        success {
+            echo "✅ Deployment successful: ${params.DEPLOY_TARGET}"
+        }
+        failure {
+            echo "❌ Deployment failed and rollback executed: ${params.DEPLOY_TARGET}"
+        }
+    }
+}
