Update backend image to use ECR repository

--- a/k8s/backend/deployment.yaml
+++ b/k8s/backend/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: sachinashokyadav/neoproject:backend
+        image: 970547336262.dkr.ecr.ap-south-1.amazonaws.com/neoproject/backend-img:backend
         ports:
         - containerPort: 3500
         env:
