--- a/jenkins/cd/jenkinsfile
+++ b/jenkins/cd/jenkinsfile
@@ -1,98 +1,1 @@
-pipeline {
-    agent any
-
-    parameters {
-        choice(
-            name: 'DEPLOY_TARGET',
-            choices: ['all', 'backend', 'frontend', 'database'],
-            description: 'Select component to deploy'
-        )
-    }
-
-    environment {
-        AWS_REGION       = 'ap-south-1'
-        AWS_CREDENTIALS  = 'aws-creds'
-        EKS_CLUSTER_NAME = 'eks-neosoft'
-        K8S_NAMESPACE    = 'three-tier'
-
-        BACKEND_IMAGE  = '970547336262.dkr.ecr.ap-south-1.amazonaws.com/neoproject/backend-img:backend'
-        FRONTEND_IMAGE = '970547336262.dkr.ecr.ap-south-1.amazonaws.com/neoproject/frontend-img:frontend'
-    }
-
-    stages {
-
-        stage('Checkout Manifests') {
-            steps {
-                git branch: 'main',
-                    url: 'https://github.com/sachinashokyadav/neo-project.git'
-            }
-        }
-
-        stage('Deploy to EKS') {
-            steps {
-                withAWS(credentials: 'aws-creds', region: 'ap-south-1') {
-                    script {
-
-                        sh '''
-                          aws eks update-kubeconfig \
-                            --region ap-south-1 \
-                            --name eks-neosoft
-                        '''
-
-                        try {
-
-                            if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'backend') {
-                                sh '''
-                                  kubectl apply -f k8s/backend -n three-tier
-                                  kubectl set image deployment/backend \
-                                    backend=970547336262.dkr.ecr.ap-south-1.amazonaws.com/neoproject/backend-img:backend \
-                                    -n three-tier
-                                  kubectl rollout status deployment/backend -n three-tier --timeout=120s
-                                '''
-                            }
-
-                            if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'frontend') {
-                                sh '''
-                                  kubectl apply -f k8s/frontend -n three-tier
-                                  kubectl set image deployment/frontend \
-                                    frontend=970547336262.dkr.ecr.ap-south-1.amazonaws.com/neoproject/frontend-img:frontend \
-                                    -n three-tier
-                                  kubectl rollout status deployment/frontend -n three-tier --timeout=120s
-                                '''
-                            }
-
-                            if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'database') {
-                                sh '''
-                                  kubectl apply -f k8s/database -n three-tier
-                                '''
-                            }
-
-                        } catch (err) {
-
-                            echo '⚠️ Deployment failed — rolling back'
-
-                            if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'backend') {
-                                sh 'kubectl rollout undo deployment/backend -n three-tier'
-                            }
-
-                            if (params.DEPLOY_TARGET == 'all' || params.DEPLOY_TARGET == 'frontend') {
-                                sh 'kubectl rollout undo deployment/frontend -n three-tier'
-                            }
-
-                            error('Deployment failed and rollback executed')
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    post {
-        success {
-            echo "✅ Deployment successful: ${params.DEPLOY_TARGET}"
-        }
-        failure {
-            echo "❌ Deployment failed and rollback executed: ${params.DEPLOY_TARGET}"
-        }
-    }
-}
+need to add
